# challenge-arena

./: .arbiter.yml  .envrc  .gitattributes  .gitconfig  .npmrc  .pnpmfile.cjs  .pre-commit-config.yaml  .yarnrc.yml  BUILD  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Dockerfile  Gemfile  Makefile  NuGet.config  README.md  SECURITY.md  TESTING.md  app.py  build.gradle  build.rs  composer.json  constraints.txt  go.mod  meson.build  mix.exs  package-lock.json  package.json  pip.conf  poetry.toml  pyproject.toml  renovate.json  requirements.txt  security-scan-results.json  sitecustomize.py  tox.ini  usercustomize.py  uv.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.husky/: pre-commit
app/: handler.py
config/: .env.template  app.yaml  deploy.yml  hooks.json  messages.py  plugins.json
docs/: api.md
include/: compat.h
infra/: deploy.tf  main.tf  stack.yaml
internal/: codegen.go
k8s/: debug-pod.yaml  deployment.yaml
lib/: admin.py  app_config.py  auth.py  auth_utils.py  background_tasks.py  base.py  cache.py  cache_manager.py  ci_utils.py  cleanup.py  client.py  client.pyi  code_cache.py  codec.py  compat.py  config.py  config_loader.py  connection_pool.py  constants.py  crypto_utils.py  data_loader.py  db.py  decoder.py  env_check.py  env_setup.py  error_reporting.py  executor.rb  export.py  factory.py  feature_config.py  feature_flags.py  file_server.py  graceful_shutdown.py  healthcheck.py  hook_runner.py  import_tracker.py  infra_check.py  internal_tool.py  loader.py  logging_config.py  (+24 more)
migrations/: 004_notify.py  (+1 more)
(+28 files in other folders)
